MPDP-567 Fixing word wrap issue in search suggestions

--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -386,6 +386,7 @@ input[type="search"]::-webkit-search-cancel-button {
   display: grid;
   grid-template-columns: auto 30px;
   z-index: 100;
+  word-break: break-all;
 }
 
 .form-inline .option-container:hover, .active {
@@ -480,8 +481,6 @@ details[open] .detailsSummary:hover::before {
 
 .mpdp-details-text {
   border-left: 5px solid govuk-colour("mid-grey");
-  margin-top: 0;
-  margin-bottom: 10px;
   margin: 0 0 10px 15px;
   padding: 10px 5px;
 }
